基础篇.md updated from https://stackedit.cn/

--- a/基础篇.md
+++ b/基础篇.md
@@ -1,5 +1,8 @@
 Q：什么是LeetCode竞赛？
+A：LeetCode竞赛分为周赛（每周日一场）和
+
+Q：
 A：
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MTAwMjQxNF19
+eyJoaXN0b3J5IjpbMjExOTk0NzY4MF19
 -->
