基础篇.md updated from https://stackedit.cn/

--- a/基础篇.md
+++ b/基础篇.md
@@ -1,10 +1,10 @@
 Q：什么是LeetCode竞赛？
 
-A：LeetCode竞赛分为周赛（每周日一场）和
+A：LeetCode竞赛分为周赛（北京时间每周日上午一场）和双周赛（北京时间每两周的周六夜间一场）。
 
-Q：
+Q：几道题？难不难？
 
-A：
+A：周赛和双周赛都是4道题，目前道题型分布稳定为（1道easy｜2道mid｜1道hard）
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5NTk1NDMwOF19
+eyJoaXN0b3J5IjpbMjAwNTI2NzM3M119
 -->
