基础篇.md updated from https://stackedit.cn/

--- a/基础篇.md
+++ b/基础篇.md
@@ -18,7 +18,15 @@ Q：什么是3分组？
 
 A：前面说过，LeetCode分为1 easy,2 mid, 3 hard,对应的分数为3，4，5，6。也就意味着AK选手，即全部做对的人，在18分组，做对1 easy的选手，位于3分组。
 
+Q：我是新选手，怎么在低段位保险上分？
+
+A：保证自己获得至少7分，即做对前两题。
+
+Q：我第二题都有可能做不出怎么办？每次做第一题这分数上不去啊？
+
+A： 先做前两题，在本地调试，有把握在完成提交。记住，不提交是没事的，相当于没比赛，分数不会变动。一旦点击提交，就会记录排名了。推荐先提交第二题，能过再提交第一题。如果第二题都做不出，直接弃赛保分。
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODYwMTg4NjUyXX0=
+eyJoaXN0b3J5IjpbMTI1Mjg0MzgwNV19
 -->
